# bias-adjusted-nma-adv

./: .gitignore  E156-PROTOCOL.md  README.md  index.html  pyproject.toml  reconstruct_adjusted_curves.py  reproduce.py  reproduce_real_meta.py  requirements.txt  run_all_cardio_nmas.py  run_hfref_nma.py  try_real_cardio_nma.py
docs/: adversarial_review.md  adversarial_review_round10.md  adversarial_review_round11.md  adversarial_review_round12.md  adversarial_review_round13.md  adversarial_review_round14.md  adversarial_review_round15.md  adversarial_review_round16.md  adversarial_review_round17.md  adversarial_review_round18.md  adversarial_review_round19.md  adversarial_review_round2.md  adversarial_review_round20.md  adversarial_review_round21.md  adversarial_review_round22.md  adversarial_review_round23.md  adversarial_review_round24.md  adversarial_review_round25.md  adversarial_review_round26.md  adversarial_review_round27.md  adversarial_review_round28.md  adversarial_review_round29.md  adversarial_review_round3.md  adversarial_review_round30.md  adversarial_review_round31.md  adversarial_review_round32.md  adversarial_review_round33.md  adversarial_review_round34.md  adversarial_review_round4.md  adversarial_review_round5.md  adversarial_review_round6.md  adversarial_review_round7.md  adversarial_review_round8.md  adversarial_review_round9.md  journal_peer_review.md  methods_evaluation.md  portfolio_reuse_map.md  real_meta_benchmarks.md  review_artifact_policy.md  technical_specification.md  (+1 more)
e156-submission/: index.html  paper.md  protocol.md
tests/: test_dta.py  (+58 more)
(+365 files in other folders)
