[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bias-adjusted-nma-adv"
version = "0.1.0"
description = "Advanced Bias-Adjusted Network Meta-Analysis (NMA) with Meta-Regression, Hartung-Knapp adjustment, and Scoped Down-Weighting."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Mahmood Ahmad", email = "mahmood.ahmad2@nhs.net" }
]
keywords = ["network-meta-analysis", "meta-analysis", "bias-adjustment", "hartung-knapp", "meta-regression"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Mathematics"
]
dependencies = [
  "numpy>=1.20",
  "scipy>=1.7",
  "pandas>=1.3"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]

[tool.setuptools]
package-dir = { "" = "src" }
license-files = ["LICENSE"]

[tool.setuptools.package-data]
bias_nma_adv = ["source_type_policy.toml", "study_design_policy.toml"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
